RH-2007-01-23-0: Enhancem:  o Performance test for dbwriter added
                            o arco install test splitted (arco_dbwriter_install and
                              arco_reporting_install)
                 Review:    CR

RD-2007-01-22-0: Bugfix:    fixed install_core system error
                 Review:    CR

DT-2007-01-19-0: Enhancem:  o Extended DRMAA tests for DRMAA Java binding 1.0

CR-2007-01-19-2: Bugfix:    o fixed some test problems in job_start test
                            o added more error information

CR-2007-01-19-1: Bugfix:    Enhanced fix CR-2007-01-19-0 (Issue 111) to detect the
                            automounter prefix before starting the test. Now the
                            test should support any automounter prefix
                 Review:    JG

RH-2007-01-19-0: Bugfix:    installation of arco checktree did not work in mysql < 5.02
                  
CR-2007-01-19-0: Bugfix:    path_alias test should support darwin automounter prefix
                 Issue:     111
                 Review:    JG

JG-2007-01-18-0: Bugfix:    Fixed system_tests/windows/gui with no windows host.
                            Increased timeout in drmaa test.

RH-2007-01-18-0: Enhancm:   o mysql support for arco checktree added
                              (thanks to Aja, she prepared the testsuite changes)
                 Review:    CR

CR-2007-01-18-1: Bugfix:    o fixed bug produced by CR-2007-01-18-0:
                              testsuite might hang on unexpected script 
                              errors
                            o added new method: wait_for_remote_dir

CR-2007-01-18-0: Cleanup:   o start_remote_prog now always reads complete 
                              script output
                            o reworked testsuite lock script
                            o reworked output of testsuite script to be more
                              readable

CR-2007-01-17-3: Cleanup:   o performance fix for dmraa test
